--- a/docs/style.css
+++ b/docs/style.css
@@ -2,32 +2,38 @@ body{
 	margin-top: 50px;
 	background:#FFF;
 	margin-left: 0;
+        overflow-x:hidden;
+
 	width: 100%;
 	
 	}
 	
 .header{
 	width:100%;
-	height:50px;
+	height:55px;
 	background:white;
 	margin: 0;
 	padding-bottom:20px;
 	z-index:2;
-	align-items: baseline;
+	align-items: center;
 	position: fixed;
 	overflow: hidden;
 	top: 0;
-	padding-top: 10px;
+	
 }
 
 .header .img
 {float:left;
+	margin-top: 0px;
+	margin-right: 25px;
+	margin-bottom: 10px;
 }
 
 .header .scerch{
 	border-radius:20px;
 	border:1px solid;
 	float:right;
+	margin-top: 25px;
 	margin-left:90px;
 	margin-right:10px;
 	position:relative;
@@ -36,7 +42,7 @@ body{
 
 .header .scerch input[type="text"]{
 	border-radius:10px;
-	width:180px;
+	width:190px;
 	}
 	
 	
@@ -51,15 +57,11 @@ border:0px solid #fff;
 cursor:pointer; 
 }	
 
-.sticky{
-position:fixed;
-top:0;
-width:100%;
-}
+
 
 
 .mainmenu {
-	padding-top: 10px;
+	padding-top: 20px;
 background-color:#000;
 width:80%;
 height:40px; 
@@ -78,7 +80,8 @@ display:inline; }
 position:relative;
 float:left;
 height:40px;
-margin-right:30px; }
+margin-right:30px; 
+}
 
 .navigbar li a {
 color:#FFF;
@@ -92,7 +95,8 @@ color: black;
 }
 
 .navigbar li a:hover {
-text-decoration:none; }
+font-size: 20px;
+flex-grow: 1; }
 
 .navigbar li:hover .navigitem {
 display:block; }
@@ -121,7 +125,8 @@ z-index:9999; }
 .navigitem ul {
 border-top:5px solid #053668; 
 background:#FCF;
-overflow:hidden; } 
+z-index:2;
+ } 
 
 .navigitem ul li {
 display:inline;
@@ -130,7 +135,8 @@ border-bottom:1px solid #dce1e7;
 display:block;
 width:100%;
 margin-right:0px;
-padding:0px 10px; }
+padding:0px 10px; 
+}
 
 .navigitem ul li a { 
 color:#4d4f54;
@@ -163,8 +169,8 @@ background-position:0 -29px; }
 margin-right:0; }
 
 .banner{
-	
-		backgroung:#00F;
+	    padding-top: 30px;
+		background::#00F;
 		width:100%;
 		height:607px;
 		z-index:0;
@@ -179,10 +185,24 @@ margin-right:0; }
 		display:block;
 		width:100%;
 	}
-	
-	.sticky + .banner {
-padding-top:102px;
+
+	.textblock  {
+    position: absolute;
+    top: 40%;
+    left: 2%;
+    padding: 20px;
+    color:black;   
+    font-size: 20px;
+    z-index: 1;
+    opacity: 0.6;
+    align-items: center;
+ 
+
 }
+ 
+ 
+	
+	
 	
 	.tripfinder {
 width:700px;
@@ -274,7 +294,7 @@ padding:5px 20px; }
 		height:600px;
 		width:100%;
 		padding-left:100px;
-		background: url(project%20in%20making/26-flower-logo-design-inspiration.png) no-repeat center ;
+		background: url(floral-1973409_960_720.jpg) no-repeat center ;
 	}
 	.contact-top heading
 	{
@@ -350,7 +370,8 @@ position:relative;
 float:left;
 width:23%;
 height:auto;
-//text-align:center;
+text-align:center;
+margin-top:30px;
 margin-right:30px;
 background-color:#fff;
 box-shadow:1px 1px 2px rgba(0,0,0,0.2);}
@@ -375,8 +396,9 @@ text-align:left;
 padding-left:10px;
 position:relative;}
 
-#blabla{
+.blabla{
 	width: 100%;
+	height: 70%;
 }
 
 .pricetag  { 
@@ -430,9 +452,16 @@ margin:15px auto 0;
 
 
 
+
+
+
+
 .footer {
-clear:both;
+display: flex;
+flex-direction: row;
 width:100%;
+bottom: 0;
+justify-content: space-between;
 background-color:#CCC;
 color:#000;}
 
@@ -478,7 +507,9 @@ height:30px; }
 
 .footer .footerGroup.emailsubscription{
 padding-right:0px; 
-width: 20%;}
+width: 20%;
+float:right;
+}
 
 .emailsubscription input[type="text"] {
 border:1px solid #e1e1e1; 
@@ -494,6 +525,8 @@ background:#003;
 color:#fff; 
 text-transform:uppercase;
 font-weight:bold;
+margin-top: 10px;
+
 padding:7px 20px; 
 border:0px solid #fff;
 -webkit-border-radius:0px 2px 2px 0px;
@@ -501,9 +534,25 @@ border:0px solid #fff;
 border-radius: 0px 2px 2px 0px;
  }
 
-.copyright { 
-clear:both; 
-display:block;
-font-size:12px;
-padding:10px 0px; 
-color:#999999; }
+
+@media screen and (max-width: 800px) {
+  .footer {
+
+    flex-direction: column;
+  }
+  .highlightWrapper{
+  	flex-direction: column;
+  	this.stop();
+
+
+  }
+  .blabla
+  {
+  	height: 50%;
+
+  }
+  .highlight-item
+  {
+  	width: 60%;
+  }
+}
