--- a/docs/style.css
+++ b/docs/style.css
@@ -1,72 +1,60 @@
 body{
-	margin-top: 50px;
+	
 	background:#FFF;
 	margin-left: 0;
+
         overflow-x:hidden;
 
 	width: 100%;
 	
 	}
 	
-.header{
+header{
+	display: flex;
+	flex-direction: row;
 	width:100%;
 	height:55px;
 	background:white;
 	margin: 0;
-	padding-bottom:20px;
+	padding-bottom:10px;
 	z-index:2;
 	align-items: center;
 	position: fixed;
-	overflow: hidden;
-	top: 0;
 	
+	top: 0;
+	bottom: 0;
+
 }
 
-.header .img
+img
 {float:left;
 	margin-top: 0px;
-	margin-right: 25px;
-	margin-bottom: 10px;
+	margin-right: 70px;
+	z-index:2;
+	height: 110%;
+
+
 }
 
-.header .scerch{
-	border-radius:20px;
-	border:1px solid;
-	float:right;
-	margin-top: 25px;
-	margin-left:90px;
-	margin-right:10px;
-	position:relative;
-	
+ 
+.grow:hover
+{
+        -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+        color: purple;
 }
-
-.header .scerch input[type="text"]{
-	border-radius:10px;
-	width:190px;
-	}
-	
-	
-#xyz{
-	position:absolute; 
-top:0px; 
-right:0px; 
-width:40px;
-height:30px;
-background: url(project%20in%20making/icons.png) no-repeat 0px -54px;
-border:0px solid #fff; 
-cursor:pointer; 
-}	
-
 
 
 
 .mainmenu {
 	padding-top: 20px;
-background-color:#000;
+background-color:transparent;
 width:80%;
 height:40px; 
 top: 0;
-background-color: white;
+
+z-index:2;
 
 }
 
@@ -74,7 +62,8 @@ background-color: white;
 width:60%;
 margin:0 auto;
 list-style:none;
-display:inline; }
+display:inline;
+z-index:2; }
 
 .navigbar li {
 position:relative;
@@ -85,18 +74,20 @@ margin-right:30px;
 
 .navigbar li a {
 color:#FFF;
-font-size:15px; 
+font-size:17px; 
 text-transform:capitalize;
 line-height:40px;
 display:block;
 text-decoration:none; 
 color: black;
+text-shadow:1px  grey;
 
 }
 
 .navigbar li a:hover {
-font-size: 20px;
-flex-grow: 1; }
+
+color: pink;
+text-shadow:1px 1px purple; }
 
 .navigbar li:hover .navigitem {
 display:block; }
@@ -146,7 +137,42 @@ line-height:40px;
 }
 
 .navigitem ul li a:hover { 
-color:#2b68a8; }	
+color:#2b68a8; }
+
+
+
+
+
+.search{
+	border-radius:20px;
+	border:1px solid;
+	float:right;
+	margin-top: 15px;
+	margin-left:90px;
+	margin-right:10px;
+	position:relative;
+	
+}
+
+.search input[type="text"]{
+	border-radius:10px;
+	width:190px;
+	}
+	
+	
+#xyz{
+	position:absolute; 
+top:0px; 
+right:0px; 
+width:40px;
+height:30px;
+background: url(project%20in%20making/icons.png) no-repeat 0px -54px;
+border:0px solid #fff; 
+cursor:pointer; 
+}	
+
+
+
 
 .signupBtn {
 float:left;
@@ -182,8 +208,10 @@ margin-right:0; }
 	{
 		height:607px;
 		background-position:center top;
+		background-size: cover;
 		display:block;
 		width:100%;
+		background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("project in making/tween-fragrance-1145x532.jpg");
 	}
 
 	.textblock  {
@@ -360,7 +388,7 @@ width: 70%;}
 .highlightWrapper{
 	display: flex;
 	flex: wrap;
-	flex-direction: row;
+	flex-direction:row;
 width:99.6%;
 height:100%;
 }
@@ -380,12 +408,15 @@ box-shadow:1px 1px 2px rgba(0,0,0,0.2);}
 text-align:left;
 width: 100%; 
 padding:10px 10px 0px 10px;	
+
 }
 .highlight-item h3 a {
 font-size:16px;
 color:#205098;
-text-shadow: 0px 1px 1px #e4ebe9;
-text-decoration:none;}
+text-shadow:0px 1px 1px #e4ebe9;
+text-decoration:none;
+
+}
 
 .highlight-item h3 a:hover {
 text-decoration:underline; }
@@ -397,9 +428,11 @@ padding-left:10px;
 position:relative;}
 
 .blabla{
+
 	width: 100%;
 	height: 70%;
 }
+
 
 .pricetag  { 
 position:absolute;
@@ -419,11 +452,18 @@ width:1000px;
 margin:15px auto 0;
 }
 
-.float-left {
-	float:left;}
+.float-left   {
+	margin-left: 17%;
+	margin-right: 20%;
+	height:60%;
 
-.float-right {
-	float:right;}
+
+	}
+.fr
+{
+	height: 90%;
+}
+ 
 
 .contentHolder {
  width:100%;
@@ -535,24 +575,36 @@ border-radius: 0px 2px 2px 0px;
  }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .footer {
 
     flex-direction: column;
   }
   .highlightWrapper{
   	flex-direction: column;
-  	this.stop();
-
 
   }
-  .blabla
-  {
-  	height: 50%;
-
+  header{
+  	flex-direction: column;
+  	margin-left: 0px;
+  
+  	
   }
+  .search{
+  	display: none;
+  }
+  img{
+  	height: 110%;
+  }
+  
+
+ .float-right{
+ 	padding-left: 17%;
+ }
   .highlight-item
   {
   	width: 60%;
+  	height: auto;
+
   }
 }
