--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,7 @@ body{
 	
 	background:#FFF;
 	margin-left: 0;
-
+margin-top: 0;
         overflow-x:hidden;
 
 	width: 100%;
@@ -26,15 +26,7 @@ header{
 
 }
 
-img
-{float:left;
-	margin-top: 0px;
-	margin-right: 70px;
-	z-index:2;
-	height: 110%;
 
-
-}
 
  
 .grow:hover
@@ -47,155 +39,10 @@ img
 
 
 
-.mainmenu {
-	padding-top: 20px;
-background-color:transparent;
-width:80%;
-height:40px; 
-top: 0;
 
-z-index:2;
-
-}
-
-.navigbar {
-width:60%;
-margin:0 auto;
-list-style:none;
-display:inline;
-z-index:2; }
-
-.navigbar li {
-position:relative;
-float:left;
-height:40px;
-margin-right:30px; 
-}
-
-.navigbar li a {
-color:#FFF;
-font-size:17px; 
-text-transform:capitalize;
-line-height:40px;
-display:block;
-text-decoration:none; 
-color: black;
-text-shadow:1px  grey;
-
-}
-
-.navigbar li a:hover {
-
-color: pink;
-text-shadow:1px 1px purple; }
-
-.navigbar li:hover .navigitem {
-display:block; }
-
-.navigbar li.memberlogin {
-padding:5px 0px;
-height:29px;
-margin-right:0; 
-float:right;}
-
-.navigbar li.memberlogin a {
-line-height:29px; }
-
-.navigbar li.memberlogin a:hover {
-text-decoration:none; }
-
-.navigitem { 
-display:none;
-position:absolute; 
-top:30px;
-padding-top:10px; 
-width:250px; 
-background: url(project%20in%20making/icons.png) no-repeat 10px -410px; 
-z-index:9999; }
-
-.navigitem ul {
-border-top:5px solid #053668; 
-background:#FCF;
-z-index:2;
- } 
-
-.navigitem ul li {
-display:inline;
-background-color:#FCF;
-border-bottom:1px solid #dce1e7;
-display:block;
-width:100%;
-margin-right:0px;
-padding:0px 10px; 
-}
-
-.navigitem ul li a { 
-color:#4d4f54;
-font-size:13px;
-text-decoration:none;
-line-height:40px;
-}
-
-.navigitem ul li a:hover { 
-color:#2b68a8; }
-
-
-
-
-
-.search{
-	border-radius:20px;
-	border:1px solid;
-	float:right;
-	margin-top: 15px;
-	margin-left:90px;
-	margin-right:10px;
-	position:relative;
-	
-}
-
-.search input[type="text"]{
-	border-radius:10px;
-	width:190px;
-	}
-	
-	
-#xyz{
-	position:absolute; 
-top:0px; 
-right:0px; 
-width:40px;
-height:30px;
-background: url(project%20in%20making/icons.png) no-repeat 0px -54px;
-border:0px solid #fff; 
-cursor:pointer; 
-}	
-
-
-
-
-.signupBtn {
-float:left;
-margin-right:20px;
-padding:0px 20px;
-color:#7e5503 ;
-background: url(project%20in%20making/gradients.jpg) repeat-x 0 0;
-font-weight:bold;
-text-transform:uppercase ;
-font-size:14px ; 
--webkit-border-radius: 2px; 
--moz-border-radius: 2px; 
- border-radius: 2px;
-}
-.signupOrangeBtn {
-margin-right:10px;
-background-position:0 -29px; }
-
-.signupYellowBtn {
-margin-right:0; }
 
 .banner{
-	    padding-top: 30px;
+	    padding-top: 20px;
 		background::#00F;
 		width:100%;
 		height:607px;
@@ -206,6 +53,7 @@ margin-right:0; }
 	
 	.banner .slider
 	{
+
 		height:607px;
 		background-position:center top;
 		background-size: cover;
@@ -283,76 +131,6 @@ border-radius: 3px;}
 width:100px;
 }
 
-.redButton {
-color:#fff;
-background:#6F0;
-border:0px solid #fff;
-padding:5px 20px; }
-
-
-	
-.map iframe{
-	width:100%;
-	height:350px;
-}
-.map {
-    padding-bottom: 3em;
-}
-	
-	
-	
-	
-	
-	.adds{
-		width:100%;
-		position:absolute;
-		bottom:0;
-	}
-
-	.contact
-	{background-color:#FFF;
-	width:1000px;
-	height:600px;
-	padding:80px;
-	}
-	.container
-	{
-		margin:30px;
-		background:#FFF;
-		height:600px;
-		width:100%;
-		padding-left:100px;
-		background: url(floral-1973409_960_720.jpg) no-repeat center ;
-	}
-	.contact-top heading
-	{
-		padding:50px;
-		background-color:#FFF;
-		font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
-		float:right;
-		
-	}
-	.formm
-	{
-		float:left;
-		margin-right:50px;
-	}
-	.adress
-	{
-		
-		text-align:left;
-		margin-right:200px;
-		margin-left:50px;
-		font-size:large;
-		color:#09F;
-		
-		float:right;
-		width:100px;
-		height:100px;
-		
-		
-	}
-
 .bodyCont {
 width:100%;
 background:#eee;
@@ -365,6 +143,7 @@ margin:0 auto;
 
 .section_title {
 padding:0; 
+padding-left: 10px;
 background: url(project%20in%20making/divider.gif) center repeat-x;
 text-align:left;
 
@@ -459,9 +238,10 @@ margin:15px auto 0;
 
 
 	}
-.fr
+	.fr
 {
 	height: 90%;
+	width: 90%;
 }
  
 
@@ -489,6 +269,28 @@ margin:15px auto 0;
 
 
 
+.fr1 {
+  animation-duration: 10s;
+  animation-name: slidein;
+}
+.fr2 {
+  animation-duration: 10s;
+  animation-name: slidein;
+}
+
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 150%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 90%;
+    height: 90%;
+  }
+}
 
 
 
@@ -503,7 +305,8 @@ width:100%;
 bottom: 0;
 justify-content: space-between;
 background-color:#CCC;
-color:#000;}
+color:#000;
+padding-left: 20px;}
 
 .footer .footerGroup {
 float:left; 
@@ -573,6 +376,47 @@ border:0px solid #fff;
 -moz-border-radius: 0px 2px 2px 0px; 
 border-radius: 0px 2px 2px 0px;
  }
+ 
+
+
+
+
+
+.topnav {
+	width: 100%;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  z-index: 2;
+  margin-top: 0;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  z-index: 2;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: purple;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+
 
 
 @media screen and (max-width: 900px) {
@@ -582,6 +426,7 @@ border-radius: 0px 2px 2px 0px;
   }
   .highlightWrapper{
   	flex-direction: column;
+  	padding-left: 40px;
 
   }
   header{
@@ -593,10 +438,18 @@ border-radius: 0px 2px 2px 0px;
   .search{
   	display: none;
   }
+  .banner{
+  	padding-top: 0;
+  }
   img{
   	height: 110%;
   }
+
   
+  .banner .slider{
+  	size: 50%;
+
+  }
 
  .float-right{
  	padding-left: 17%;
@@ -606,5 +459,28 @@ border-radius: 0px 2px 2px 0px;
   	width: 60%;
   	height: auto;
 
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: fixed;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
